@@ -563,40 +563,34 @@ of a string output-stream."
 (define-stream-read-sequence encrypting-input-stream simple-octet-vector
   (with-slots (wrapped-stream cipher buffer n-bytes-valid position)
       stream
-    (do ((total 0)
-         (n 0))
-        ((= start end) total)
+    (do ((n 0))
+        ((= start end) start)
       (when (= position n-bytes-valid)
         (setf n-bytes-valid (read-sequence buffer wrapped-stream)
               position 0)
-        (incf total n-bytes-valid)
         (when (zerop n-bytes-valid)
-          (return total))
+          (return start))
         (encrypt cipher buffer buffer :plaintext-end n-bytes-valid))
       (setf n (min (- end start) (- n-bytes-valid position)))
       (replace seq buffer :start1 start :end1 end :start2 position :end2 n-bytes-valid)
       (incf start n)
-      (incf position n)
-      (incf total n))))
+      (incf position n))))
 
 (define-stream-read-sequence decrypting-input-stream simple-octet-vector
   (with-slots (wrapped-stream cipher buffer n-bytes-valid position)
       stream
-    (do ((total 0)
-         (n 0))
-        ((= start end) total)
+    (do ((n 0))
+        ((= start end) start)
       (when (= position n-bytes-valid)
         (setf n-bytes-valid (read-sequence buffer wrapped-stream)
               position 0)
-        (incf total n-bytes-valid)
         (when (zerop n-bytes-valid)
-          (return total))
+          (return start))
         (decrypt cipher buffer buffer :ciphertext-end n-bytes-valid))
       (setf n (min (- end start) (- n-bytes-valid position)))
       (replace seq buffer :start1 start :end1 end :start2 position :end2 n-bytes-valid)
       (incf start n)
-      (incf position n)
-      (incf total n))))
+      (incf position n))))
 
 (define-stream-write-sequence encrypting-output-stream simple-octet-vector
   (with-slots (wrapped-stream cipher buffer)
